example/secondfile/objects/DHStatus_Access_Method_Data__c.object
<CustomObject>
    <fields>
        <fullName>Access_Method__c</fullName>
        <label>Access Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHStatus_Ethernet_Access_Circuit_Data__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DHStatus-Ethernet Access Circuit Data</label>
        <referenceTo>DHStatus_Ethernet_Access_Circuit_Data__c</referenceTo>
        <relationshipLabel>DHStatus-Access Method Datas</relationshipLabel>
        <relationshipName>DHStatus_Access_Method_Datas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inter_Connect_Technology__c</fullName>
        <label>Inter Connect Technology</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DHStatus-Access Method Data</label>
    <nameField>
        <displayFormat>DHAMD-{000000}</displayFormat>
        <label>DHStatus-Access Method Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DHStatus-Access Method Datas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>